--- a/src/styles/dashbaord.css
+++ b/src/styles/dashbaord.css
@@ -13,13 +13,46 @@ body {
 
 /* Sidebar */
 .sidebar {
-  width: 250px;
+  width: 10%;
   background-color: #2c3e50;
   color: #fff;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
+
+/* this seems to have its own issues  */
+
+/* .sidebar .expand-btn {
+  opacity: 0;
+  position: absolute;
+  top: 1rem;
+  right: -1rem;
+  background-color: #3f4c58;
+  padding: 0.7rem;
+  border-radius: 0.5rem;
+  pointer-events: none;
+  transition: all 500ms ease-in-out;
+}
+.sidebar:hover .expand-btn {
+  opacity: 1;
+  pointer-events: all;
+} */
+/* 
+.collasped {
+  width: 3%;
+}
+.collasped .sidebar-menu i {
+  font-size: 1.3rem;
+}
+.collasped .sidebar-menu a,
+.collasped h2 {
+  opacity: 0;
+  pointer-events: none;
+  transition-delay: 0s;
+} */
+
 .sidebar .logo-container img {
   width: 2.5rem;
 }
@@ -31,10 +64,26 @@ body {
 .sidebar-menu {
   list-style: none;
   padding: 0;
+  margin-top: 3rem;
 }
 
 .sidebar-menu li {
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 0.1rem;
+  transition: all 500ms ease-in-out;
+}
+
+.sidebar-menu li:hover span {
+  margin-left: 1.2rem;
+  transition: all 300ms ease-in-out;
+}
+.sidebar-menu li .li-active {
+  background-color: rgb(136, 136, 136);
+  color: var(--clr-primary);
+  margin-left: 0;
+  border-left: 5px solid rgb(168, 238, 255);
 }
 
 .sidebar-menu a {
@@ -47,17 +96,10 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.sidebar-menu a:hover,
-.sidebar-menu a.active {
-  background-color: #34495e;
-  color: #fff;
-}
-
 /* Main Content */
 .main-content {
   flex-grow: 1;
-  padding: 20px;
-  overflow-y: auto;
+  padding: 10px;
 }
 
 /* profile sectiom nstylign */
@@ -142,15 +184,17 @@ body {
 /* Charts Section */
 .charts-section {
   display: flex;
+  width: 100%;
   gap: 20px;
   justify-content: center;
   height: 40vh;
+  overflow: hidden;
   margin-top: 20px;
 }
 
 .chart {
-  flex: 1;
   padding: 0.5rem;
+  flex: 1;
   height: 100%;
   background-color: #fff;
   border-radius: 5px;
