--- a/src/styles/dashbaord.css
+++ b/src/styles/dashbaord.css
@@ -99,7 +99,7 @@ body {
 /* Main Content */
 .main-content {
   flex-grow: 1;
-  padding: 10px;
+  padding: 1rem;
 }
 
 /* profile sectiom nstylign */
