--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -15,6 +15,7 @@ p {
   margin: 0;
   background-color: white;
   padding: 1rem;
+  border-radius: 1rem;
 }
 /* profile-header-text  styling */
 .profile-header-text {
