--- a/src/styles/dashbaord.css
+++ b/src/styles/dashbaord.css
@@ -1,18 +1,24 @@
 /* General Styles */
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
   font-family: Arial, sans-serif;
   color: #333;
   background-color: #f4f4f9;
 }
 
-.dashboard-container {
-  display: flex;
+.main-container {
+  display: grid;
+  grid-template-columns: 16rem auto;
   height: 100vh;
+}
+body.collapsed .main-container {
+  grid-template-columns: 5rem auto;
 }
 
 /* Sidebar */
-.sidebar {
+/* .sidebar {
   width: 10%;
   background-color: #2c3e50;
   color: #fff;
@@ -20,7 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-}
+} */
 
 /* this seems to have its own issues  */
 
@@ -53,7 +59,7 @@ body {
   transition-delay: 0s;
 } */
 
-.sidebar .logo-container img {
+/* .sidebar .logo-container img {
   width: 2.5rem;
 }
 
@@ -94,11 +100,10 @@ body {
   padding: 10px;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-}
+} */
 
 /* Main Content */
 .main-content {
-  flex-grow: 1;
   padding: 1rem;
 }
 
