--- a/src/styles/invoice.css
+++ b/src/styles/invoice.css
@@ -2,10 +2,14 @@
   --background: #f8f8f8;
   --large-text: #333;
   --small-text: #666;
-  --border-color: #ddd;
+  --border-color: #000000;
 }
 .invoice-container {
-  background-color: red;
+  height: 90vh;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 /* Invoice heaedr section */
 .invoice-header {
@@ -38,7 +42,7 @@
 
 .invoice-table {
   margin-top: 1rem;
-  border: 2px solid var(--border-color);
+  border: 2px solid rgb(53, 53, 53);
   border-collapse: collapse;
   width: 100%;
   position: relative;
@@ -47,11 +51,11 @@
 .invoice-table thead th {
   padding: 0.5rem;
   text-align: start;
-  border: 1px solid var(--border-color);
+  border: 1px solid black;
 }
 .invoice-table tbody tr td {
   padding: 0.5rem;
-  border: 1px solid var(--border-color);
+  border: 1px solid black;
 }
 
 .invoice-table tbody tr:last-of-type {
@@ -108,4 +112,14 @@
   margin-top: 2rem;
   margin: 0 auto;
   display: flex;
+}
+
+/* bootstrap properties */
+.add-ivo-btn {
+  margin-top: 2rem;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.9rem;
+  align-items: center;
+  background-color: #2c3e50;
 }
